[package]
name = "biscuit-python"
version = "0.3.2"
edition = "2021"

[lib]
name = "biscuit_auth"
crate-type = ["cdylib"]

[dependencies]
biscuit-auth = { git = "https://github.com/eclipse-biscuit/biscuit-rust", branch = "push-lrwmmzutpkpq", features = ["pem"] }
# biscuit-auth = { version = "6.0.0-beta.2", features = ["pem"] }
pyo3 = { version = "0.22.6", features = ["extension-module", "chrono"] }
hex = "0.4"
base64 = "0.13.0"
chrono = "0.4"
